java 19 build - multi version build